--- a/cnc_server/views/static/home.css
+++ b/cnc_server/views/static/home.css
@@ -1,11 +1,15 @@
 
 
 .header {
-
-    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url("../images/background.jpeg");
+    height: 1000px;
+    background-image: linear-gradient(rgba(255,255,2555,0.2),rgba(255,255,255,0.1)), url("../images/background.jpeg");
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
-
 }
 
+.navigator {
+    height: 100px;
+    background-color: #111;
+    opacity: 0.7;
+}
